# fastapi-sample-project

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.db
docs/: Architecture.vsdx
fastapi_test/: __init__.py  __main__.py  config.py  database.py  security.py
fastapi_test/crud/: __init__.py  user.py
fastapi_test/exceptions/: __init__.py  users.py
fastapi_test/graphql/: __init__.py  users.py
fastapi_test/models/: __init__.py  users.py
fastapi_test/routers/: __init__.py  users.py
fastapi_test/schemas/: __init__.py  users.py
netcore/: __init__.py  __main__.py  config.py  database.py
netcore/core/: models.py  utils.py
netcore/crud/: __init__.py  hosts.py  secrets.py  user.py
netcore/exceptions/: __init__.py
netcore/graphql/: __init__.py  hosts.py  posts.py  secrets.py  users.py
netcore/models/: __init__.py  backends.py  hosts.py  posts.py  secrets.py  users.py
netcore/routers/: __init__.py  auth.py  hosts.py  posts.py  secrets.py  tasks.py  users.py
netcore/schemas/: __init__.py
netcore/security/: __init__.py  ldap.py  sso.py
netcore/utils/: worker.py
