[project]
name = "fastapi-test"
dynamic = ['version']  # Need to take a look on a light build system which manage that (flit for example)
dependencies = [
    "aiosqlite==0.19.0",
    "fastapi-redis-cache==0.2.5",
    "fastapi-security[oauth2]==0.5.0",
    "fastapi==0.98.0",
    "prometheus-fastapi-instrumentator==6.0.0",
    "pydantic[dotenv]==1.10.9",
    "sqlalchemy-utils==0.41.1",
    "strawberry-graphql[fastapi]==0.190.0",
    "uvicorn[standard]==0.22.0",  # Better support for graphiql
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "flake8-pyproject",
    "flake8",
    "isort",
    "pytest",
]

[project.scripts]
fastapi-test = "fastapi_test.__main__:main"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".git,__pycache__,docs/source/conf.py,build,dist,.env,.venv,venv,env"
max-line-length = 120