[build-system]
requires = ["setuptools>=62.6", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "netcore"
dynamic = ['version']  # Need to take a look on a light build system which manage that (flit for example)
dependencies = [
    "aiosqlite==0.19.0",
    "asyncpg==0.27.0",  # Used to discuss with PostgreSQL database asynchronously
    "fastapi-redis-cache==0.2.5",
    "fastapi==0.98.0",
    "prometheus-fastapi-instrumentator==6.0.0",
    # "psycopg2==2.9.6",  # Postgres driver if you don't want to be asynchronous between the app and the database
    "pydantic[dotenv]==1.10.10",
    "pydantic[email]==1.10.10",
    "sqlalchemy-utils==0.41.1",
    "strawberry-graphql[fastapi]==0.190.0",
    "uvicorn[standard]==0.22.0",  # Better support for graphiql
]

[project.optional-dependencies]
dev = [
    "bandit",
    "black",
    "build",
    "flake8-pyproject",
    "flake8",
    "isort",
    "pytest",
]

[project.scripts]
netcore = "netcore.__main__:main"

[tool.setuptools_scm]
root = "."

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".git,__pycache__,docs/source/conf.py,build,dist,.env,.venv,venv,env"
max-line-length = 120